[tool.poetry]
name = "learn-opencv"
version = "0.1.0"
description = "learning to use opencv"
authors = ["Aaron Feinberg <afeinberg35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.5"
opencv-python = "^4.10.0.84"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
