[tool.poetry]
name = "hough-line-detection"
version = "0.1.0"
description = ""
authors = ["Aaron Feinberg <afeinberg35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cv = "^1.0.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
